--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,9 +13,11 @@
     "@eslint/js": "^9.9.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-foundry": "^1.1.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.12",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
@@ -94,6 +96,8 @@
     "deploy-sepolia": "hardhat deploy --network sepolia"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@aave-dao/aave-v3-origin": "^3.3.0",
+    "@openzeppelin/contracts": "^5.0.2",
+    "hardhat-dependency-compiler": "^1.2.1"
   }
 }
